# lazyfish_knowbase

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: db.py  main.py  models.py  schemas.py
app/routers/: articles.py
app/services/: llm_provider.py  processing.py  scraper.py
docs/: 進度紀錄.md
tests/: conftest.py  test_articles.py  test_processing.py  test_scraper.py
